syntax = "proto3";

package proto;

option java_package = "proto";
option java_outer_classname = "RouterProtos";

service RouterConnector {
  rpc InitialisationSecret (ClientRequest) returns (ResponseMessage);
  rpc InitialisationTrial (ClientRequest) returns (ResponseMessage);
  rpc ProlongSecret (ClientRequest) returns (ResponseMessage);
}

message ClientRequest {
  int64 id = 1;
  int64 tg_user_id = 2;
  string phone = 3;
  string name = 4;
  string user_last_visited = 5;
  string vpn_profile = 6;
  bool is_vpn_profile_alive = 7;
  string expired_at = 8;
  bool is_in_payment_process = 9;
  string payment_key = 10;
  string balance = 11;
  string held_balance = 12;
}



message ResponseMessage {
  string message = 1;
}
